--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div class="col-xs-4">
                         <h1>SUMMARY</h1>
                         <p>Hi! I'm Annie Lin aka the girl with bangs.<br> 
-                        NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current senior at Harvard studying CS. Artist, scholar, tourist & so much more!
+                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Incoming Software Engineer at Google (Japan!). Artist, scholar, tourist & so much more!
                         </p>
                         <h1>I ENJOY:</h1>
                         <ul class="list">
@@ -218,7 +218,7 @@
                     <div class="col-md-8">
                         <h1>SUMMARY</h1>
                         <p>Hi! I'm Annie Lin aka the girl with bangs. <br> 
-                        NYC-born and Philly-raised. Alumni of the 272nd class of Central. (2nd oldest public high school in the country!) Proud bearer of a simian line. Current sophomore at Harvard studying CS. Artist, scholar, tourist & so much more!
+                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Incoming Software Engineer at Google (Japan!). Artist, scholar, tourist & so much more!
                         </p>
                         <h1>I ENJOY:</h1>
                         <ul class="list">
@@ -255,8 +255,8 @@
                             Detailed Resume
                         </a>
                         <br>
-                        <h1 class="no-margin"> Harvard College </h1>
-                        <h2 class="no-margin">Cambridge, MA | A.B. Computer Science (Expected Graduation: May 2017)</h2>
+                        <h1 class="no-margin"> Harvard College '17</h1>
+                        <h2 class="no-margin">Cambridge, MA | A.B. Computer Science</h2>
                         <ul class="list hidden-sm hidden-md">
                             <li>Taiwanese Cultural Society (Co-President)</li>
                             <li>Women in Computer Science (Vice-President)</li>
