--- a/index.html
+++ b/index.html
@@ -490,12 +490,6 @@
                   <i class="fa fa-github-alt fa-stack-1x fa-inverse"></i>
                 </span>
             </a>
-            <a href="https://www.google.com/calendar/embed?mode=WEEK&amp&src=theannielin%40gmail.com&ctz=America/New_York" target="_blank"> 
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-calendar fa-stack-1x fa-inverse"></i>
-                </span>
-            </a>
             <a href="http://www.instagram.com/theannielin" target="_blank"> 
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
@@ -708,16 +702,8 @@
                             I'm always excited to meet (or re-meet) people.<br>
                             I would love to have a chat over coffee<br>
                             (or any other beverage of your choice).<br>
-                            Let's grab a drink!<br>
-                            (Check my calendar for times I'm available,<br>
-                            and schedule with the coffee button.)</h1>
+                            Let's grab a drink!</h1>
                             <div style="font-size:20px;">
-                                <a href="https://www.google.com/calendar/embed?mode=WEEK&amp&src=theannielin%40gmail.com&ctz=America/New_York" target="_blank"> 
-                                    <span class="fa-stack fa-lg">
-                                      <i class="fa fa-circle fa-stack-2x"></i>
-                                      <i class="fa fa-calendar fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
                                 <a href="mailto:hello@anniel.in?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
                                     <span class="fa-stack fa-lg">
                                       <i class="fa fa-circle fa-stack-2x"></i>
