--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <div class="col-xs-4">
                         <h1>SUMMARY</h1>
                         <p>Hi! I'm Annie Lin aka the girl with bangs.<br> 
-                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Incoming Software Engineer at Google (Japan!). Artist, scholar, tourist & so much more!
+                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Software Engineer at Google (Japan!). Artist, scholar, tourist & so much more!
                         </p>
                         <h1>I ENJOY:</h1>
                         <ul class="list">
@@ -218,7 +218,7 @@
                     <div class="col-md-8">
                         <h1>SUMMARY</h1>
                         <p>Hi! I'm Annie Lin aka the girl with bangs. <br> 
-                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Incoming Software Engineer at Google (Japan!). Artist, scholar, tourist & so much more!
+                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Software Engineer at Google (Japan!). Artist, scholar, tourist & so much more!
                         </p>
                         <h1>I ENJOY:</h1>
                         <ul class="list">
@@ -339,8 +339,8 @@
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive proj" src="img/proj/brushup.png" alt="brushup">
+                                <a href="https://github.com/theannielin/CVFinalProject" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/magic.png" alt="magic">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
@@ -395,8 +395,8 @@
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive proj" src="img/proj/brushup.png" alt="brushup">
+                                <a href="https://github.com/theannielin/CVFinalProject" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/magic.png" alt="magic">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
@@ -451,8 +451,8 @@
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
-                                <a href="http://brushup.me/" target="_blank">
-                                    <img class="img-responsive proj" src="img/proj/brushup.png" alt="brushup">
+                                <a href="https://github.com/theannielin/CVFinalProject" target="_blank">
+                                    <img class="img-responsive proj" src="img/proj/magic.png" alt="magic">
                                 </a>
                             </div><!-- /.column-->
                             <div class="col-xs-3">
