--- a/index.html
+++ b/index.html
@@ -279,10 +279,13 @@
                         </ul>
                         <h1 class="no-margin"> Skills </h1>
                         <ul class="list">
+                            <li>Objective-C</li>
+                            <li>Java</li>
+                            <li>C++</li>
                             <li>C</li>
-                            <li>OCAML</li>
-                            <li>SQL</li>
+                            <li>Javascript</li>
                             <li>PYTHON</li>
+                            <li>OCAML</li>
                             <li>HTML/CSS</li>
                             <li>Fluent Chinese (Mandarin)</li>
                             <li>Basic German</li>
