--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                             <li>HTML/CSS</li>
                             <li>Fluent Chinese (Mandarin)</li>
                             <li>Basic German</li>
-                            <li>Elementary Japanese</li>
+                            <li>Intermediate Japanese</li>
                             <li>Graphic Design (Photoshop/Illustrator)</li>
                         </ul>
 
