--- a/index.html
+++ b/index.html
@@ -707,7 +707,7 @@
                             (or any other beverage of your choice).<br>
                             Let's grab a drink!</h1>
                             <div style="font-size:20px;">
-                                <a href="mailto:hello@anniel.in?subject=Coffee%20Scheduling&body=Note-%20Please%20fill%20out:%0A%0AName:%20%0ADates/Times:%20%0ALocation:%20%0APhone:%20%0A"> 
+                                <a href="www.mytinybalcony.com"> 
                                     <span class="fa-stack fa-lg">
                                       <i class="fa fa-circle fa-stack-2x"></i>
                                       <i class="fa fa-coffee fa-stack-1x fa-inverse"></i>
