--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Annie Lin">
     <meta name="robots" content="NOODP">
     <meta content='harvard, annie, lin, annie lin, philadelphia' name='keywords'>
-    <meta name="description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin, Harvard student hailing from Philadelphia!"><meta name="description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin, Harvard student hailing from Philadelphia!">
+    <meta name="description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin!"><meta name="description" content="Hello, world! Portfolio/Personal website for and made by Annie Lin!">
     <title>Annie Lin</title>
     <link rel="shortcut icon" href="/img/shortcut.png" type="image/x-icon" />
     <link rel="icon" href="/img/shortcut.png" type="image/x-icon" />
@@ -190,7 +190,7 @@
                     <div class="col-xs-4">
                         <h1>SUMMARY</h1>
                         <p>Hi! I'm Annie Lin aka the girl with bangs.<br> 
-                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Software Engineer at Google (Japan!). Artist, scholar, tourist & so much more!
+                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Software Engineer at Google (Tokyo then Seattle). Artist, scholar, tourist & so much more!
                         </p>
                         <h1>I ENJOY:</h1>
                         <ul class="list">
@@ -218,7 +218,7 @@
                     <div class="col-md-8">
                         <h1>SUMMARY</h1>
                         <p>Hi! I'm Annie Lin aka the girl with bangs. <br> 
-                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Software Engineer at Google (Japan!). Artist, scholar, tourist & so much more!
+                        NYC-born and Philly-raised. Alumna of the 272nd class of Central High School and Harvard 2017. Proud bearer of a simian line. Software Engineer at Google (Tokyo then Seattle). Artist, scholar, tourist & so much more!
                         </p>
                         <h1>I ENJOY:</h1>
                         <ul class="list">
